[package]
name = "gpbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
log = "0.4.18"
log4rs = "1.2.0"
regex = "1.8.3"
serenity = "0.11.5"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.37"
